--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
   #new imports
   provider: ^3.0.0
   sembast: ^2.0.1+2
   path_provider: ^1.3.0
   get_it: ^3.0.1
+  fluttertoast: ^3.1.3
 
 
 dev_dependencies:
