--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   path_provider: ^1.3.0
   get_it: ^3.0.1
   fluttertoast: ^3.1.3
+  flutter_svg: ^0.15.0
 
 
 dev_dependencies:
@@ -48,7 +49,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
