--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   fluttertoast: ^3.1.3
   flutter_svg: ^0.15.0
   flutter_widgets: ^0.1.9
-  reorderables: ^0.2.12
+  workmanager: ^0.2.0
 
 dev_dependencies:
   flutter_test:
