--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   fluttertoast: ^3.1.3
   flutter_svg: ^0.15.0
   flutter_widgets: ^0.1.9
-  workmanager: ^0.2.0
+  background_fetch: ^0.4.0
+  shared_preferences: ^0.5.6+1
 
 dev_dependencies:
   flutter_test:
