--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: strongr
+name: push
 description: Legit app for legit gains.
 
 # The following defines the version and build number for your application.
