--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   flutter_widgets: ^0.1.9
   background_fetch: ^0.4.0
   shared_preferences: ^0.5.6+1
-
+  strings: ^0.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
