--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shared_preferences: ^0.5.6+1
   strings: ^0.1.2
   adobe_xd: ^0.1.3
+  icon_shadow: ^1.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
